# Dictum

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  build.rs  installer.iss
.cargo/: config.toml
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: api.rs  audio.rs  config.rs  downloader.rs  dropper.rs  history.rs  hotkey.rs  inject.rs  live.rs  main.rs  media.rs  notify.rs  reformulate.rs  settings.rs  setup.rs  substitution.rs  transcribe.rs  tray.rs  updater.rs
